@@ -5,6 +5,7 @@
   -changed the default layout of the tracker to incorporate new icons
   -fixed frog ocarina minigame requires to play storm to them before
   -added bombchus as a sequence break for bombs (in most places)
+  -added all kinds of logic sequence breaks (thanks SauceRelic!)
 1.0.0.3:
   -fixed Zoras Domain/Fountain logic interaction between child and adult
   -fixed Zoras Fountain Fairy can't be opened with hammer
